--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^18",
     "react-markdown": "8.0.3",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "3.0.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "@types/lodash": "^4.14.195"
   },
   "prettier": {
     "singleQuote": false
